KiCad ChangeLog 2010
====================

Please add newer entries at the top, list the date and your name with
email address.


2010-Feb-14 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
================================================================================
Eeschema, libedit: fixed add/remove alias functions, broken
All: added in popup menus hotkeys info for zoom commands


2010-Feb-14 UPDATE Jerry Jacobs <xor.gate.engineering[at]gmail[dot]com>
================================================================================
++ KiCad
   Check if project is noname.pro so we don't get a error if kicad is first run.
   Removed double separator in file menu.
   Moved recent project to submenu in Open recent.

++ Common
   Added CTest/CDash support file
   Moved helper tool to helper subdirectory

++ OSX
   Update compiling doc

2010-Feb-07 UPDATE Vesa Solonen <vesa.solonen@hut.fi>
================================================================================
++ all:
    Finnish translation, take one.

2010-Feb-04 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
================================================================================
++ gerbview:
    Use layer_widget to manage gerber layers colors and visibility.

2010-Jan-31 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
================================================================================
++ pcbnew:
    More about work on color selection and items visibility:
    removed global variables and a lot of redundancies
    Now Modedit does not uses the visiblity options of the board editor
    (That can create a problem if hide modules is activated)
    work in progress but almost finished


2010-Jan-30 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
================================================================================
++ pcbnew:
    More about work on color selection and items visibility