@@ -4,6 +4,16 @@ KiCad ChangeLog 2010
 Please add newer entries at the top, list the date and your name with
 email address.
 
+2010-Feb-17 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
+================================================================================
+Eeschema, libedit: fixed last problems when editing alias info.
+    Now alias changes can be undone, and are correctly updated in lib
+    when updating the current edited component in memory
+    New code could be a good starting point to store all aliases info in the
+    root component,
+    and also easily store it to the *.lib files and remove the .dcm associated files
+    (most of code is done)
+
 
 2010-Feb-14 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
 ================================================================================
